--- a/advanced_css/branches.html
+++ b/advanced_css/branches.html
@@ -14,7 +14,7 @@
 		</header>
 		<nav> 
 			<ul>
-			<li><a href="index.html">Home</a>
+			<li><a href="Index.html">Home</a>
 			<li><a href="about.html">About</a>
 			<li><a href="branches.html">Branches</a>
 		</ul>
