--- a/responsive/Index.html
+++ b/responsive/Index.html
@@ -22,13 +22,13 @@
 		
 		
 	</nav>
-	<hr>
 	
-	<main id="mainone">
+	
+	<main id="multi_col">
 	<section id="col1">
 	<h1 class="headingstyle" >What is Eastern Orthodoxy?</h1>
 		<p>Eastern Orthodoxy is one of the three major branches of Christianity, alongside Roman Catholicism and Protestantism. It is deeply rooted in the traditions and teachings of the early Christian Church and traces its origins to the apostles. The Eastern Orthodox Church is characterized by its rich liturgical life, commitment to preserving ancient Christian doctrines, and its emphasis on mysticism and the transformative power of divine grace.</p>
-		<hr>
+		
 		<h2>Core Beliefs</h2>
 		<p>Eastern Orthodoxy upholds the Nicene Creed, the foundational statement of Christian faith, which affirms belief in the Trinity: Father, Son, and Holy Spirit. The Orthodox Church holds to the belief that salvation is achieved through a combination of faith, grace, and works. The Church teaches that humans can experience salvation through union with Christ and transformation into His likeness, a process known as theosis.</p>
 	
@@ -42,7 +42,7 @@
 			<li>Icons: Orthodox icons are sacred images used in Eastern Christian traditions, created to depict holy figures like Christ, the Virgin Mary, saints, and angels, serving as windows to the divine. </li>
 		</ul>
 		
-		<hr>
+		
 
 		<h3>The Church Today</h3>
 			
@@ -52,7 +52,7 @@
 		</aside>
 		
 		
-	</main>
+	</main id="multi_col">
 	<footer>
 		&copy; Understanding Eastern Orthodoxy
 	</footer>
