--- a/responsive/contact.html
+++ b/responsive/contact.html
@@ -43,7 +43,7 @@
 	
 			
 			
-		</main main="multi_col">
+		</main>
 		<footer>&copy; Understanding Eastern Orthodoxy</footer>
 		</div>
 		</body>
